workshop03/create-app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment-v1
  labels:
    name: app-deployment-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      name: app
      version: v1
  template:
    metadata: 
      name: app-pod-v1
      labels:
        name: app
        version: v1
    spec:
      containers:
      - name: app-container-v1
        image: geekwannabe555/nw_server:0.0.1
        imagePullPolicy: Always
        ports: 
        - name: app
          containerPort: 3000
