workshop03/create-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment-v2
  labels:
    name: app-deployment-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      name: app
      version: v2
  template:
    metadata: 
      name: app-pod-v2
      labels:
        name: app
        version: v2
    spec:
      containers:
      - name: app-container-v2
        image: stackupiss/northwind-app:v2
        imagePullPolicy: Always
        ports: 
        - name: app
          containerPort: 3000
