workshop03/create-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    name: database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: db
      version: v1
  template:
    metadata: 
      name: db-pod
      labels:
        name: db
        version: v1
    spec:
      volumes:
      - name: mysqldb-volume
        persistentVolumeClaim:
          claimName: mysqldb-pvc
      containers:
      - name: db-container
        image: geekwannabe555/nw_db:0.0.1
        imagePullPolicy: Always
        ports: 
        - name: sql
          containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysqldb-volume
