workshop03/create-app-svc-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v1-svc
spec:
  type: ClusterIP
  selector:
    name: app
    version: v1
  ports:
    - name: app
      port: 3000
      targetPort: 3000
      protocol: TCP
