workshop03/create-app-svc-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v2-svc
spec:
  type: ClusterIP
  selector:
    name: app
    version: v2
  ports:
    - name: app
      port: 3000
      targetPort: 3000
      protocol: TCP
