workshop03/create-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  type: ClusterIP
  selector:
    name: db
    version: v1
  ports:
    - name: sql
      port: 3306
      targetPort: 3306
      protocol: TCP
