workshop03/create-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: app-v1-svc
          servicePort: 3000
      - path: /v2
        backend:
          serviceName: app-v2-svc
          servicePort: 3000
      - path: /
        backend:
          serviceName: app-v2-svc
          servicePort: 3000
